# SaveRemote

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  build.cmd  package-lock.json  package.json
server/: app.go  app.js  app.py  package.json
server/rust/: Cargo.toml
server/rust/src/: main.rs
src/: extension.ts
