[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1"
glob = "^0"
tokio = { version = "^1", features = ["full"] }
axum = { version = "^0", features = ["multipart"] }
serde =  { version = "^1", features = ["derive"] }
